--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,95 +1,13 @@
 doctype
-doctype
 html.no-js
     include partials/head
-    body#front-page
+    body#dummy-page
         include partials/symbols
         #container
             include partials/header
-            h1
-                span.word-1
-                    span.letter-T.letter-1 T
-                    span.letter-h.letter-2 h
-                    span.letter-e.letter-3 e
-                    span.letter-r.letter-4 r
-                    span.letter-e.letter-5 e
-                    span.letter-i.letter-6 i
-                    span.letter-s.letter-7 s
-                span.word-2
-                    span.letter-s.letter-1 s
-                    span.letter-o.letter-2 o
-                    span.letter-m.letter-3 m
-                    span.letter-e.letter-4 e
-                    span.letter-t.letter-5 t
-                    span.letter-h.letter-6 h
-                    span.letter-i.letter-7 i
-                    span.letter-n.letter-8 n
-                    span.letter-g.letter-9 g
-                span.word-3
-                    span.letter-c.letter-1 c
-                    span.letter-o.letter-2 o
-                    span.letter-n.letter-3 n
-                    span.letter-s.letter-4 s
-                    span.letter-t.letter-5 t
-                    span.letter-a.letter-6 a
-                    span.letter-n.letter-7 n
-                    span.letter-t.letter-8 t
-                    span.letter-l.letter-9 l
-                    span.letter-y.letter-10 y
-                span.word-4
-                    span.letter-g.letter-1 g
-                    span.letter-o.letter-2 o
-                    span.letter-i.letter-3 i
-                    span.letter-n.letter-4 n
-                    span.letter-g.letter-5 g
-                span.word-5
-                    span.letter-o.letter-1 o
-                    span.letter-n.letter-2 n
+            h1.type-animation There is something constantly going on
 
-            h4
-                span.word-1
-                    span.letter-Y.letter-1 Y
-                    span.letter-o.letter-2 o
-                    span.letter-u.letter-3 u
-                span.word-2
-                    span.letter-j.letter-1 j
-                    span.letter-u.letter-2 u
-                    span.letter-s.letter-3 s
-                    span.letter-t.letter-4 t
-                span.word-3
-                    span.letter-h.letter-1 h
-                    span.letter-a.letter-2 a
-                    span.letter-v.letter-3 v
-                    span.letter-e.letter-4 e
-                span.word-4
-                    span.letter-t.letter-1 t
-                    span.letter-o.letter-2 o
-                span.word-5
-                    span.letter-k.letter-1 k
-                    span.letter-n.letter-2 n
-                    span.letter-o.letter-3 o
-                    span.letter-w.letter-4 w
-                span.word-6
-                    span.letter-e.letter-1 e
-                    span.letter-x.letter-2 x
-                    span.letter-a.letter-3 a
-                    span.letter-c.letter-4 c
-                    span.letter-t.letter-5 t
-                    span.letter-l.letter-6 l
-                    span.letter-y.letter-7 y
-                span.word-7
-                    span.letter-w.letter-1 w
-                    span.letter-h.letter-2 h
-                    span.letter-a.letter-3 a
-                    span.letter-t.letter-4 t
-                span.word-8
-                    span.letter-dot.letter-1 .
-                    span.letter-dot.letter-2 .
-                    span.letter-dot.letter-3 .
-                    span.letter-smc.letter-4 ;
-                    span.letter-dsh.letter-5 -
-                    span.letter-rrb.letter-6 )
-
+            h2.type-animation You just have to know exactly what... ;-)
 
             include partials/footer
         include partials/scripts
