--- a/src/jade/partials/head.jade
+++ b/src/jade/partials/head.jade
@@ -21,36 +21,8 @@ head
 
     //- TODO : Place favicon.ico and apple-touch-icon.png in the root directory
     //- link(rel="stylesheet", href="css/libs/libs.css")
-    script(src="js/modernizr.custom.js")
+    //- css reset
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css")
     link(rel="stylesheet", href="css/style.css")
-    // HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
-    <!--[if lt IE 9]>
-    script(src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.0/html5shiv.js")
-    script(src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js")
-    <![endif]-->
-    script.
-        if (typeof navigator.plugins !== "undefined" && typeof navigator.plugins["Shockwave Flash"] === "object") {
-            var el = document.children[0];
-                if (el.classList) {
-                  el.classList.add("flash");
-                } else {
-                  el.className += 'flash';
-                }
-        } else {
-            var el = document.children[0];
-                if (el.classList) {
-                  el.classList.add("no-flash");
-                } else {
-                  el.className += 'no-flash';
-                }
-        }
 
-        Modernizr.addTest('firefox', function() {
-            !!navigator.userAgent.match(/firefox/i);
-        });
-        Modernizr.addTest('chrome', function() {
-            !!navigator.userAgent.match(/chrome/i);
-        });
-        Modernizr.addTest('ie', function() {
-            !!navigator.userAgent.match(/MSIE/i);
-        });
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
