--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,7 +8,7 @@
 	position: fixed;
 	top: 50%;
 	left: 0;
-	transform: translate(0, -75%);
+	transform: translate(0, -60%);
 	width: 100vw;
 }
 
@@ -50,6 +50,8 @@ h1, h2 {
 	text-align: center;
 	font-family: 'bosun03';
 	margin-bottom: 1.2em;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 h1{
 	font-size: 3em;
