--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -49,9 +49,10 @@ body{
 h1, h2 {
 	text-align: center;
 	font-family: 'bosun03';
+	margin: 0 auto;
 	margin-bottom: 1.2em;
-	margin-left: 10%;
-	margin-right: 10%;
+	// margin-left: 10%;
+	// margin-right: 10%;
 }
 h1{
 	font-size: 3em;
@@ -60,6 +61,28 @@ h1{
 h2{
 	font-size: 1.5em;
 	color: #808080;
+}
+
+@media  (min-width: 390px) and (max-width: 1024px) {
+	h1{
+		width: 70%;
+	}
+	h2{
+		width: 60%;
+	}
+}
+
+@media (max-width: 389px) {
+	h1{
+		width: 80%;
+		margin-bottom: 1em;
+		> *{
+			font-size: smaller;
+		}
+	}
+	h2{
+		width: 80%;
+	}
 }
 
 .type-animation-random-bounce{
