--- a/client/styles/_colors.scss
+++ b/client/styles/_colors.scss
@@ -1,5 +1,7 @@
 $black-copy:#333333;
 
+$utility: #677CF7;
+
 //////////////////////////////////////////////////
 //		 override bootstrap default colors		//
 //////////////////////////////////////////////////
