--- a/client/styles/animate-scss/_properties.scss
+++ b/client/styles/animate-scss/_properties.scss
@@ -96,6 +96,14 @@ $visibilityDefault: hidden !default;
           animation-name: $animation-name;
 }
 
+@mixin animation-direction($direction) {
+  -webkit-animation-direction: $direction;
+     -moz-animation-direction: $direction;
+      -ms-animation-direction: $direction;
+       -o-animation-direction: $direction;
+          animation-direction: $direction;
+}
+
 @mixin keyframes($animation-name) {
   @-webkit-keyframes #{$animation-name} {
     @content;
