--- a/client/partials/email.html
+++ b/client/partials/email.html
@@ -1,7 +1,7 @@
 <template name="emailOverlay">
-	<div class="email-overlay">
+	{{#momentum plugin='animate-css' sKlass='email-overlay' timeout=5000}}
 		{{> Template.dynamic template=dialog}}
-	</div>
+	{{/momentum}}
 </template>
 
 <template name="composeEmail">
@@ -9,44 +9,69 @@
 		<div class="dialog-heading">
 			<h4>Email me</h4>
 			<a href="#" class="close-button js_close_dialog" title="Menu">
-				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+				{{> SVGicon name="cross"}}
 			</a>
 		</div>
 		<div class="dialog-form">
-			<form accept-charset="utf-8">
+			<form id="emailForm">
 				<div class="sender-info">
-					<label>
-						<span class="label-text">
-							Enter a name
-						</span>
-						<input required="required" type="text" name="name" placeholder="Please enter your name">
-					</label>
-					<label>
-						<span class="label-text">
-							Enter an email address
-						</span>
-						<input required="required" type="email" name="email" placeholder="Please enter your email address">
-					</label>
+					{{>formField label_text="Enter a name" name="name" placeholder="Please enter your name" type="text" value=name isRequired=true}}
+					{{>formField label_text="Enter an email address" name="email" placeholder="Please enter your email address" type="email" value=email isRequired=true}}
 				</div>
 				<div class="message">
-					<label>
-						<span class="label-text">
-							Enter a subject
-						</span>
-						<input required="required" type="text" name="subject" placeholder="Please enter subject" value="{{subject}}">
-					</label>
-					<label>
-						<span class="label-text">
-							Enter your message
-						</span>
-						<textarea required="required" name="message" placeholder="Please type in your message" rows="10">{{session 'email-dialog-message'}}</textarea>
-					</label>
+					{{>formField label_text="Enter a subject" name="subject" placeholder="Please enter a subject" type="text" value=subject isRequired=true}}
+					{{>formField label_text="Enter a message" name="message" placeholder="Please type in your message" type="textarea" value=message isRequired=true}}
 				</div>
 			</form>
 		</div>
 		<div class="dialog-controls">
 			<a type="button" class="dialog-secondary-btn js_clear_email" href="#" title="Clear">Clear</a>
-			<a type="button" class="dialog-cta-btn dynamic_color js_send_email" data-color="{{globalPalet.cta}}" href="#" title="Send">Send</a>
+			<a type="button" class="dialog-cta-btn dynamic_color js_send_email" data-color="{{globalPallet.cta}}" href="#" title="Send">Send</a>
+		</div>
+	</div>
+</template>
+
+<template name="formField">
+	<label class="{{#if value}}in-use{{/if}}">
+		<span class="label-text">
+			{{label_text}}
+		</span>
+		
+		{{#if isTextarea type}}
+		<textarea required="{{isRequired}}" name="{{name}}" placeholder="{{placeholder}}" rows="10">{{value}}</textarea>		
+		{{else}}
+		<input required="{{isRequired}}" type="{{type}}" name="{{name}}" placeholder="{{placeholder}}" value="{{value}}">		
+		{{/if}}
+
+		{{>formError name}}
+	</label>
+</template>
+
+<template name="formError">
+	{{#if errors this}}
+	<span class="error-text">
+		{{#each err in errors this}}
+			{{err}};&emsp;
+		{{/each}}
+	</span>
+	{{/if}}
+</template>
+
+<template name="successDialog">
+	<div class="success-dialog dialog dynamic_color" data-color="{{globalPallet.cta}}">
+		<div class="dialog-heading">
+			<h4>Email sent</h4>
+			<a href="#" class="close-button js_close_dialog" title="Menu">
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+			</a>
+		</div>
+		<div class="dialog-body">
+			<p>
+			Thank you! I'll be in touch with you soon.			
+			</p>
+		</div>
+		<div class="dialog-controls">
+			<a type="button" class="dialog-cta-btn dynamic_color js_close_dialog" data-color="{{globalPalet.cta}}" href="#" title="OK">OK</a>
 		</div>
 	</div>
 </template>
